# cosyworld

./: .dockerignore  .gitignore  .replit  AI.md  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_QUICK_REFERENCE.md  DOCUMENTATION_SUMMARY.md  Dockerfile  ECONOMY.md  ENG.md  ENGINEERING_REPORT.md  ENGINEERING_REPORT_ADMIN_PANEL.md  FEATURE_DESIGN_GLOBAL_X_POSTING.md  GAP.md  LICENSE  MODEL_FALLBACK_FIX.md  PHASE2_FIXES_SUMMARY.md  PHASE3_FIXES_SUMMARY.md  PRD.md  README.DEVELOPER.md  SECURITY_UPDATES.md  babel.config.cjs  build.mjs  eslint.config.js  fly.lonelyforest.toml  fly.toml  index.html  index.js  items_export.csv  jsdoc.config.json  llm.md  package-lock.json  package.json  postcss.config.js  readme.md  replit.md  tailwind.config.cjs  tailwind.config.js  vitest.config.js  (+2 more)
.github/: AGENT.md  PULL_REQUEST_TEMPLATE.md
data/: openrouter-model-capabilities.json
docs/: ADMIN_PORTAL_UX_IMPROVEMENT_PLAN.md  AGENTIC_SYSTEM_ENGINEERING_REPORT.md  (+18 more)
v2/orchestrator-rust/: .gitignore  Cargo.toml  build.rs
v2/orchestrator-rust/fixtures/legacy-import/: east-save.json  west-save.json
v2/orchestrator-rust/src/: account_auth.rs  activation.rs  actor_practice.rs  ai_gateway.rs  avatar_identity.rs  canonical_journal.rs  canonical_world.rs  combat.rs  communal_governance.rs  content_load.rs  content_packs.rs  content_policy.rs  content_registry.rs  generated_places.rs  hosted_access.rs  index.html  kernel.rs  legacy_import.rs  main.rs  moderation.html  moderation.rs  mud.rs  natural_affordances.rs  ownership.rs  prompts.rs  rate_limit.rs  routes.rs  seed_content.json  story_metrics.rs  turns.rs  views.rs  world_causality.rs  world_simulation.rs
v2/orchestrator-rust/tests/fixtures/: srd-action-replay-golden-v1.json  srd-action-replay-golden-v2.json
(+979 files in other folders)
