[package]
name = "cosyworld-orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
cc = "1"

[dependencies]
axum = "0.8"
bs58 = "0.5"
ed25519-dalek = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
